# vortex

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  chainlit.md  dagster.yaml  dagster_cloud.yaml  environment.yml  example.py  main.py  next.config.js  package.json  pyproject.toml  requirements.txt  setup.py  vercel.json
.chainlit/: config.toml
.github/: FUNDING.yml
.github/workflows/: branch_deployments.yml  deploy.yml  python-cd.yml  python-ci.yml
databricks_session/: __init__.py  databricks_session.py
example_flows/dagster_flows/: DockerFile_user_code  README.md
example_flows/dagster_flows/dagster_home/: dagster.yaml
example_flows/prefect_flows/: gcs_filesystem.py  minio_filesystem.py  web_rag.py
examples/dagster-flows/: Dockerfile
examples/prefect-flows/: prefect.yaml  prefect_hello_world.py  prefect_sample.py
examples/vortex_demo/: Dockerfile  dagster.yaml  entrypoint.sh  test_defs.py  workspace.yaml
examples/vortex_demo/dags/: web_rag.py  web_rag_agent.py
notebooks/: crewAI_sample.ipynb  sql_agent.py  vortex_agent.ipynb
public/: stylesheet.css
src/api/: __init__.py
src/app/: layout.tsx  page.tsx
src/app/flows/: page.tsx
vortex/: __init__.py
vortex/ai/: llm.py
vortex/ai/agents/: __init__.py  custom_agent.py  memory_agent.py  sql_agent.py  utils.py
vortex/ai/llm/: __init__.py
vortex/ai/prompts/: __init__.py
vortex/ai/router/: __init__.py  routes.py
vortex/ai/tools/: __init__.py  scrapping.py  search.py
vortex/api/: __init__.py
vortex/api/data_models/: __init__.py
vortex/api/datamodels/: wapp.py
vortex/api/flows/assets/: __init__.py
vortex/api/flows/resources/: __init__.py  openai.py  postgres.py  sqlalchemy.py
vortex/api/flows/tools/: __init__.py  scrapping.py  search.py
vortex/chainlit/: .gitattributes  README.md  agent.py  app.py  auth.py
vortex/chainlit/docs.faiss/: index.faiss  index.pkl
vortex/chainlit/engine/: qa_retrieval.py  retrieval_agent.py
vortex/chat/: Dockerfile  agent.py  requirements.txt
vortex/chat/.chainlit/: config.toml
vortex/chat/engine/: qa_retrieval.py
vortex/dagster/: .gitignore  DockerFile  dagster.yaml  pyproject.toml  schema.sql  setup.cfg  workspace.yaml
vortex/dagster/vortex/: __init__.py
vortex/dagster/vortex/assets/: vortex.py
vortex/dagster/vortex/resources/: __init__.py
vortex/dagster/vortex/sensors/: __init__.py
vortex/dagster/vortex/tools/: __init__.py
vortex/dagster/vortex_tests/: test_defs.py
vortex/datamodels/: __init__.py  wapp.py
vortex/flows/: DockerFile  DockerFile_dagster  DockerFile_user_code  Dockerfile  README.md  dagster.yaml  docker-compose.yml  entrypoint.sh  setup.py  workspace.yaml
vortex/flows/assets/: __init__.py
vortex/flows/resources/: __init__.py  completion.py  orm.py  postgres.py
vortex/flows/sample_dag/: __init__.py
vortex/flows/sample_tests/: test_defs.py
vortex/flows/vortex/: __init__.py
vortex/flows/vortex/assets/: vortex.py
vortex/flows/vortex/resources/: __init__.py
vortex/flows/vortex/sensors/: __init__.py
vortex/flows/vortex/vortex_demo_dag/: __init__.py  new_row_sensor.py
vortex/io/: twilio.py
