[tool.poetry]
name = "vortex-python"
version = "0.2.0"
description = "Orchestrated LLM-powered Data Processing and SQL Chat Agent"
authors = ["Carlos D. Escobar-Valbuena <carlosdavidescobar@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "vortex"}]

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.4.1"
pydantic = "^1.10.9"
python-dotenv = "^1.0.0"
typing-extensions = "^4.7.0"
urllib3 = "^1.26.16"
dagster = "^1.6.1"
pandas = "^2.2.0"
langchain = "^0.1.5"
langchain-openai = "^0.0.5"
openai = "^1.11.1"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
bs4 = "^0.0.2"
dagster-webserver = "^1.6.1"
langchainhub = "^0.1.14"
selenium = "^4.17.2"
html2text = "^2020.1.16"
# chainlit = "^1.0.200"
# faiss-cpu = "^1.7.4"
chromadb = "^0.4.22"
tiktoken = "^0.5.2"
pymupdf = "^1.23.19"
duckduckgo-search = "^4.2"
wikipedia = "^1.4.0"
sendgrid = "^6.11.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
twilio = "^8.12.0"
python-decouple = "^3.8"
python-multipart = "^0.0.7"
pyngrok = "^7.1.0"
langchain_experimental = "^0.0.50"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "examples.vortex_demo.dags.web_rag_agent"