[tool.poetry]
name = "vortex-python"
version = "0.2.2"
description = "Orchestrated LLM-powered Data Processing and SQL Chat Agent"
authors = ["Carlos D. Escobar-Valbuena <carlosdavidescobar@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "vortex"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
mlflow = "^2.10.2"
pydantic = ">=2.5.3,<3.0.0"
python-dotenv = "^1.0.1"
typing-extensions = "^4.9.0"
urllib3 = "^1.26.16"
dagster = "^1.6.6"
pandas = "^2.2.1"
langchain = "^0.1.9"
langchain-openai = "^0.0.8"
openai = "^1.12.0"
sqlalchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"
bs4 = "^0.0.2"
dagster-webserver = "^1.6.6"
langchainhub = "^0.1.14"
selenium = "^4.18.1"
html2text = "^2024.2.26"
chromadb = "^0.4.24"
pymupdf = "^1.23.25"
wikipedia = "^1.4.0"
sendgrid = "^6.11.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
twilio = "^9.0.0"
python-decouple = "^3.8"
python-multipart = "^0.0.9"
pyngrok = "^7.1.3"
langchain-experimental = "^0.0.52"
langchain-community = "^0.0.24"
langchain-together = "^0.0.2.post1"
numexpr = "^2.9.0"
langchain-fireworks = "^0.1.1"
semantic-router = "^0.0.27"



[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
pylint = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "examples.vortex_demo.dags.web_rag_agent"